# ebotiab.github.io

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: about.en.md  about.md  contact.en.md  contact.md  index.en.md  index.md  projects.en.md  projects.md  services.en.md  services.md
docs/assets/: extra.css
